@@ -1640,6 +1640,8 @@ VALUES ('ar_EG', 'Arabic (Egypt)'),
        ('de_CH', 'German (Switzerland)'),
        ('el',    'Greek'),
        ('en',    'English'),
+       ('en_US', 'English (US)'),
+       ('en_GB', 'English (UK)'),
        ('es',    'Spanish'),
        ('es_CO', 'Spanish (Colombia)'),
        ('es_EC', 'Spanish (Ecuador)'),
