@@ -13,6 +13,13 @@ Changelog for LedgerSMB 1.3.2
 * Fixed a few files where suExec fixes were not applied (Chris T)
 * Fixed erroneous buttons marked "Save and Post" showing up (Chris T)
 * Corrected test cases so they do not fail w/o optional LaTeX mods (Chris T)
+* Made errors saving chart of accounts entry more friendly (Chris T)
+* Fixed permissions issue involving yearend (Chris T)
+* Fixed filename issue in install.sh (Chris T)
+* Fixed stylesheet/salutations display issue in user editing screen (Chris T)
+* Correcting LedgerSMB.pot (bug reported by Herman V) (Chris T)
+* Documented parameterized translation syntax for .po files (Herman V)
+* Added en_GB and en_US to language table for new installations (Chris T)
 
 Changelog for LedgerSMB 1.3.1
 * Language selection for invoice templates fixed (Chris T)
